syntax = "proto3";

package echo;

option go_package = "github.com/rasta/Rasta/proto";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service Echo {
  rpc SayHello(EchoRequest) returns (EchoResponse) {}
}
